--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="label">User Login</h1>
+        <h1 class="label">User SignUp</h1>
         <form class="login_form" method="post" name="form" onsubmit="return validated()">
             <div class="font">Email or Phone</div>
             <input autocomplete="off" type="text" name="email">
